samples/_failures_safe/1761042324_ac5bd0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef255ac0.c: In function ‘main’:
./samples/SAFE/__tmp_ef255ac0.c:147:5: error: expected expression at end of input
  147 |     int events[] = {start_evt, pause_evt,
      |     ^~~
./samples/SAFE/__tmp_ef255ac0.c:147:5: error: expected declaration or statement at end of input
